--- a/javascript/day01.html
+++ b/javascript/day01.html
@@ -5,11 +5,14 @@
     </head>
     <body>
         <script>
-            var a = 11
+            // Lite Serve vscode 插件
+            var a = 11 // 两层含义 声明和赋值
             document.write(a) // 再页面输出
             console.log(a) // 控制台打印
-            // 
+            console.log(window.name)
+            console.log(typeof a)
+            // var 变量提升 预解析的时候会先声明变量
+            // let -- 变量 const -- 常量 建议使用 
         </script>
-        <!--  -->
     </body>
 </html>
